syntax = "proto3";

package edu.usfca.protobuf;

message DummyKv {
  string key = 10001000;
  int32 val = 10001001;
}

message KvInt32 {
  string key = 1;
  int32 val = 2;
}

message KvSint32 {
  string key = 1;
  sint32 val = 2;
}

message KvFixed32 {
  string key = 1;
  fixed32 val = 2;
}

message Data {
  message MapFieldEntry {
    string key = 1;
    int32 value = 2;
  }
  
  repeated MapFieldEntry map_field = 1;
  
  map<string, int32> my_map = 2;
}

message Data1 {
  map<string, int32> my_map = 1;
}

message Data2 {
  repeated string my_key = 1;
  repeated int32 my_val = 2;
}

message KeyOnly1 {
  // TODO: Ungraded homework for L29 (see unit tests)
  bool dummy = 3;
}

message ValueOnly1 {
  // TODO: Ungraded homework for L29 (see unit tests)
  bool dummy = 3;
}

message KeyOnly2 {
  repeated string my_key = 1;
}

message ValueOnly2 {
  repeated int32 my_val = 2;
}
